test_regress/t/t_sequence_sexpr_unsup.out
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:81:26: Unsupported: sequence argument data type
   81 |   sequence p_arg_seqence(sequence inseq);
      |                          ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:89:5: Unsupported: first_match with sequence_match_items
   89 |     first_match (a, res0 = 1);
      |     ^~~~~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:92:5: Unsupported: first_match with sequence_match_items
   92 |     first_match (a, res0 = 1, res1 = 2);
      |     ^~~~~~~~~~~
%Warning-COVERIGN: t/t_sequence_sexpr_unsup.v:95:9: Ignoring unsupported: cover sequence
   95 |   cover sequence (s_a) $display("");
      |         ^~~~~~~~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_sequence_sexpr_unsup.v:96:9: Ignoring unsupported: cover sequence
   96 |   cover sequence (@(posedge a) disable iff (b) s_a) $display("");
      |         ^~~~~~~~
%Warning-COVERIGN: t/t_sequence_sexpr_unsup.v:97:9: Ignoring unsupported: cover sequence
   97 |   cover sequence (disable iff (b) s_a) $display("");
      |         ^~~~~~~~
%Error: Exiting due to
